Fixed workspacePanelTrigger to wrap content in panel and to consider params such as useCtrl

--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -1,4 +1,4 @@
-.draggable {
+[data-workspace-panel] {
 	float: left;
 }
 
